--- a/gallery.html
+++ b/gallery.html
@@ -162,7 +162,7 @@
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/library.jpg);">
-<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<a href="images/library.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 <span class="fa fa-expand"></span>
 </a>
 <div class="desc w-100 px-4">
@@ -175,7 +175,7 @@
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/droneshot.jpg);">
-<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<a href="images/droneshot.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 <span class="fa fa-expand"></span>
 </a>
 <div class="desc w-100 px-4">
@@ -188,7 +188,7 @@
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/droneshot2.jpg);">
-<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<a href="images/droneshot2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 <span class="fa fa-expand"></span>
 </a>
 <div class="desc w-100 px-4">
@@ -201,7 +201,7 @@
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/Amphitheatre.jpg);">
-<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<a href="images/Amphitheatre.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 <span class="fa fa-expand"></span>
 </a>
 <div class="desc w-100 px-4">
@@ -214,7 +214,7 @@
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/oat.jpg);">
-<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<a href="images/oat.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 <span class="fa fa-expand"></span>
 </a>
 <div class="desc w-100 px-4">
@@ -227,7 +227,7 @@
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/hostel.jpg);">
-<a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<a href="images/hostel.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 <span class="fa fa-expand"></span>
 </a>
 <div class="desc w-100 px-4">
