--- a/placement.html
+++ b/placement.html
@@ -237,9 +237,9 @@
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
             <li><a href="home.html" class="py-2 d-block">Home</a></li>
-            <li><a href="streams.html" class="py-2 d-block">Academic Units</a></li>
-            <li><a href="alumni.html" class="py-2 d-block">Sessions by Alumni</a></li>
-            <li><a href="placement.html" class="py-2 d-block">Placements</a></li>
+            <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
+            <li><a href="alumni.html" class="py-2 d-block">Sessions With Our Alumni</a></li>
+            <li><a href="placement.html" class="py-2 d-block">IEP Cell</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
             <li><a href="http://www.thapar.edu/" class="py-2 d-block">Thapar Official Website</a></li>
 <!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
@@ -261,7 +261,6 @@
         </div>
       </div>
   </footer>
-
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
       <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
       <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
