--- a/lmtsm.html
+++ b/lmtsm.html
@@ -311,9 +311,9 @@ The tech-savvy campus is set on a sprawling area of 33 acres. With students from
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
             <li><a href="home.html" class="py-2 d-block">Home</a></li>
-            <li><a href="streams.html" class="py-2 d-block">Academic Units</a></li>
-            <li><a href="alumni.html" class="py-2 d-block">Sessions by Alumni</a></li>
-            <li><a href="placement.html" class="py-2 d-block">Placements</a></li>
+            <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
+            <li><a href="alumni.html" class="py-2 d-block">Sessions With Our Alumni</a></li>
+            <li><a href="placement.html" class="py-2 d-block">IEP Cell</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
             <li><a href="http://www.thapar.edu/" class="py-2 d-block">Thapar Official Website</a></li>
 <!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
