--- a/med.html
+++ b/med.html
@@ -198,8 +198,6 @@ The department regularly revises its curriculum to align it with developments in
     
 </div>
 
-
-
   <footer class="footer">
     <div class="container">
       <div class="row">
@@ -232,9 +230,9 @@ The department regularly revises its curriculum to align it with developments in
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
             <li><a href="home.html" class="py-2 d-block">Home</a></li>
-            <li><a href="streams.html" class="py-2 d-block">Academic Units</a></li>
-            <li><a href="alumni.html" class="py-2 d-block">Sessions by Alumni</a></li>
-            <li><a href="placement.html" class="py-2 d-block">Placements</a></li>
+            <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
+            <li><a href="alumni.html" class="py-2 d-block">Sessions With Our Alumni</a></li>
+            <li><a href="placement.html" class="py-2 d-block">IEP Cell</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
             <li><a href="http://www.thapar.edu/" class="py-2 d-block">Thapar Official Website</a></li>
 <!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
