update lmtsm pics

--- a/gallery.html
+++ b/gallery.html
@@ -212,6 +212,7 @@
 </div>
 </div>
 </div>
+
 <div class="col-md-4 ftco-animate">
 <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/oat.jpg);">
 <a href="images/oat.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -251,6 +252,90 @@
 </div>
 </div>
 </div>
+<!-- lmtsm -->
+
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/lmtsm/lmtsm1.jpg);">
+<a href="images/lmtsm/lmtsm1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>Theatre</span>
+<h2><a href="work-single.html">Open Air Theatre</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/lmtsm/lmtsm2.jpg);">
+<a href="images/lmtsm/lmtsm2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>Hostel</span>
+<h2><a href="work-single.html">Girls Hostel</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/lmtsm/lmtsm3.jpg);">
+<a href="images/lmtsm/lmtsm3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>Night</span>
+<h2><a href="work-single.html">Nightscape</a></h2>
+</div>
+</div>
+</div>
+</div>
+
+
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/lmtsm/lmtsm4.jpg);">
+<a href="images/lmtsm/lmtsm4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>Theatre</span>
+<h2><a href="work-single.html">Open Air Theatre</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/lmtsm/lmtsm5.jpg);">
+<a href="images/lmtsm/lmtsm5.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>Hostel</span>
+<h2><a href="work-single.html">Girls Hostel</a></h2>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/lmtsm/lmtsm6.jpg);">
+<a href="images/lmtsm/lmtsm6.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<span class="fa fa-expand"></span>
+</a>
+<div class="desc w-100 px-4">
+<div class="text w-100 mb-3">
+<span>Night</span>
+<h2><a href="work-single.html">Nightscape</a></h2>
+</div>
+</div>
+</div>
+</div>
+
+<!-- end lmtsm -->
 </div>
 <!-- <div class="row mt-5">
 <div class="col text-center">
