add details lmtsm

--- a/gallery.html
+++ b/gallery.html
@@ -252,6 +252,7 @@
 </div>
 </div>
 </div>
+
 <!-- lmtsm -->
 
 <div class="col-md-4 ftco-animate">
@@ -262,7 +263,7 @@
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
 <span>Theatre</span>
-<h2><a href="work-single.html">Open Air Theatre</a></h2>
+<h2><a href="work-single.html">Hall</a></h2>
 </div>
 </div>
 </div>
@@ -274,8 +275,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Hostel</span>
-<h2><a href="work-single.html">Girls Hostel</a></h2>
+<span>Night</span>
+<h2><a href="work-single.html">Nightscape</a></h2>
 </div>
 </div>
 </div>
@@ -287,8 +288,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Night</span>
-<h2><a href="work-single.html">Nightscape</a></h2>
+<span>Infrastrucutre</span>
+<h2><a href="work-single.html">Lab</a></h2>
 </div>
 </div>
 </div>
@@ -302,8 +303,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Theatre</span>
-<h2><a href="work-single.html">Open Air Theatre</a></h2>
+<span>Campus</span>
+<h2><a href="work-single.html">LMTSM</a></h2>
 </div>
 </div>
 </div>
@@ -315,8 +316,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Hostel</span>
-<h2><a href="work-single.html">Girls Hostel</a></h2>
+<span>Campus</span>
+<h2><a href="work-single.html">Eagle Eye View</a></h2>
 </div>
 </div>
 </div>
@@ -328,8 +329,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>Night</span>
-<h2><a href="work-single.html">Nightscape</a></h2>
+<span>Event</span>
+<h2><a href="work-single.html">Campus Event</a></h2>
 </div>
 </div>
 </div>
