--- a/alumni.html
+++ b/alumni.html
@@ -538,14 +538,14 @@ Deutsche Bank</p>
       <td>All  - First cum first serve</td>
       <td>Rachna, Gauri, Param Tind, Manjit Singh  </td>
       <td>@mdo</td>
-       <td>Hardeep</td>
+       <td>Mansi</td>
     </tr>
     <tr>
       <th scope="row">11:00-12:00 PM</th>
       <td>All  - First cum first serve</td>
       <td>Jyotsna, Ajay Kumar, DP Sabarwal, Rajesh Uppal, Rakesh Anand</td>
       <td>@mdo</td>
-       <td>Jagatbir</td>
+       <td>Mansi</td>
     </tr>
     <tr>
       <th scope="row">12:00-1:00 PM</th>
