--- a/tslas.html
+++ b/tslas.html
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="streams.html" class="nav-link">AEngineering Streams</a></li>
+          <li class="nav-item active"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
           <li class="nav-item"><a href="placement.html" class="nav-link">IEP Cell</a></li>
