--- a/eced.html
+++ b/eced.html
@@ -185,7 +185,7 @@
 
 </p>
 
-<a href="https://tiet.zoom.us/j/96738464636?pwd=bDNKamlmaUMwaHZscE14RVk4a1J4UT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+<a href="https://tiet.zoom.us/my/eced18" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
 </div>
 </div>
