--- a/electrical.html
+++ b/electrical.html
@@ -175,7 +175,7 @@
 
 <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
-<h2 style="padding-left:200px;">Connect With Us</h2>
+<h2 style="padding-left:200px; margin-top: 80px">Connect With Us</h2>
 </div>
 </div>
 <div class="row">
