--- a/csed.html
+++ b/csed.html
@@ -158,13 +158,13 @@
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">CSED</h1>
+    <h1 class="mb-0 bread">Computer Science & Engineering</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
 <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
-<h2 style="padding-left:200px;">Connect With Us</h2>
+<h2 style="padding-left:200px; margin-top: 80px">Connect With Us</h2>
 </div>
 </div>
 <div class="row">
