--- a/eced.html
+++ b/eced.html
@@ -158,7 +158,7 @@
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">ECED</h1>
+    <h1 class="mb-0 bread">Electronics & Communication</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
