--- a/streams.html
+++ b/streams.html
@@ -301,14 +301,14 @@ Humanities & Social Sciences, TIET </p>
             institutions, which provides a steady source of highly skilled talent to the nation as well as overseas.</p>
           <ul class="ftco-footer-social p-0">
             <li class="ftco-animate"><a
-                href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"  target="_blank"
                 data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
-            <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/" data-toggle="tooltip"
+            <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/"  target="_blank" data-toggle="tooltip"
                 data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
-            <li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en" data-toggle="tooltip"
+            <li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en"  target="_blank" data-toggle="tooltip"
                 data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
             <!-- thapar link -->
-            <li class="ftco-animate"><a href="http://www.thapar.edu/" data-toggle="tooltip" data-placement="top"
+            <li class="ftco-animate"><a href="http://www.thapar.edu/"  target="_blank" data-toggle="tooltip" data-placement="top"
                 title="Thapar Homepage"><span class="fa fa-home"></span></a></li>
           </ul>
         </div>
@@ -328,7 +328,7 @@ Humanities & Social Sciences, TIET </p>
             <li><a href="alumni.html" class="py-2 d-block">Sessions With Our Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">IEP Cell</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
-            <li><a href="http://www.thapar.edu/" class="py-2 d-block">Thapar Official Website</a></li>
+            <li><a href="http://www.thapar.edu/"  target="_blank" class="py-2 d-block">Thapar Official Website</a></li>
 <!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
             <li><a href="#" class="py-2 d-block">HelpContact</a></li>
  -->          </ul>
