--- a/civil.html
+++ b/civil.html
@@ -184,7 +184,7 @@
 
 </p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+<a href="https://tiet.zoom.us/my/diptobarman"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 </div>
 </div>
 </div>
@@ -193,7 +193,7 @@
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://ced.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+<a href="http://ced.thapar.edu/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
   
 </div>
 
@@ -207,14 +207,14 @@
             institutions, which provides a steady source of highly skilled talent to the nation as well as overseas.</p>
           <ul class="ftco-footer-social p-0">
             <li class="ftco-animate"><a
-                href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"  target="_blank"
                 data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
-            <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/" data-toggle="tooltip"
+            <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/"  target="_blank" data-toggle="tooltip"
                 data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
-            <li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en" data-toggle="tooltip"
+            <li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en"  target="_blank" data-toggle="tooltip"
                 data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
             <!-- thapar link -->
-            <li class="ftco-animate"><a href="http://www.thapar.edu/" data-toggle="tooltip" data-placement="top"
+            <li class="ftco-animate"><a href="http://www.thapar.edu/"  target="_blank" data-toggle="tooltip" data-placement="top"
                 title="Thapar Homepage"><span class="fa fa-home"></span></a></li>
           </ul>
         </div>
@@ -234,7 +234,7 @@
             <li><a href="alumni.html" class="py-2 d-block">Sessions With Our Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">IEP Cell</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
-            <li><a href="http://www.thapar.edu/" class="py-2 d-block">Thapar Official Website</a></li>
+            <li><a href="http://www.thapar.edu/"  target="_blank" class="py-2 d-block">Thapar Official Website</a></li>
 <!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
             <li><a href="#" class="py-2 d-block">HelpContact</a></li>
  -->          </ul>
