--- a/gallery.html
+++ b/gallery.html
@@ -187,7 +187,7 @@
 </div>
 </div>
 <div class="col-md-4 ftco-animate">
-<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/droneshot2.jpg);">
+<div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/skyview.jpg);">
 <a href="images/droneshot2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 <span class="fa fa-expand"></span>
 </a>
