--- a/home.html
+++ b/home.html
@@ -596,6 +596,7 @@
                 </div>
               </div>
             </div>
+
             <div class="item">
               <div class="testimony-wrap py-4">
                 <div class="icon d-flex align-items-center justify-content-center"><span
@@ -614,7 +615,66 @@
                 </div>
               </div>
             </div>
+          <!-- </div> -->
+
+        <div class="item">
+              <div class="testimony-wrap py-4">
+                <div class="icon d-flex align-items-center justify-content-center"><span
+                    class="fa fa-quote-left"></span></div>
+                <div class="text">
+                  <p class="mb-4">We invite you to visit us and experience our passion for excellence and our commitment to architecting a new business world order!</p>
+                  <br>
+                  <div class="d-flex align-items-center">
+                    <div class="user-img" style="background-image: url(images/lmtsmhead.jpg)"></div>
+                    <div class="pl-3">
+                      <p class="name">Padmakumar Nair</p>
+                      <span class="position">Director, LMTSM</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <!-- </div> -->
+
+        <div class="item">
+              <div class="testimony-wrap py-4">
+                <div class="icon d-flex align-items-center justify-content-center"><span
+                    class="fa fa-quote-left"></span></div>
+                <div class="text">
+                  <p class="mb-4">I welcome you to be a part of this dynamic school. I ensure that the stimulating environment of the school would enable you to accomplish your academic pursuits with greater vigor and energy and excel in your career.</p>
+                  <br>
+                  <div class="d-flex align-items-center">
+                    <div class="user-img" style="background-image: url(images/humanhead.jpg)"></div>
+                    <div class="pl-3">
+                      <p class="name">Dr. (Ms) Kiran, Ravi</p>
+                      <span class="position">HOD, Humanities</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <!-- </div> -->
+
+        <div class="item">
+              <div class="testimony-wrap py-4">
+                <div class="icon d-flex align-items-center justify-content-center"><span
+                    class="fa fa-quote-left"></span></div>
+                <div class="text">
+                  <p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue
+                    being this web presence. This web-site holds information for all the stakeholders.</p>
+                  <br>
+                  <div class="d-flex align-items-center">
+                    <div class="user-img" style="background-image: url(images/lmtsmhead.jpg)"></div>
+                    <div class="pl-3">
+                      <p class="name">Padmakumar Nair</p>
+                      <span class="position">Director, TSLAS</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+
         </div>
       </div>
     </div>
