fix extensions again

--- a/eced.html
+++ b/eced.html
@@ -175,7 +175,7 @@
     max-width: 70%;
    margin-left: 200px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/faculty/ece.jpg);height:450px;"></div>
+<div class="img" style="background-image: url(images/faculty/ece.jpeg);height:450px;"></div>
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Electronics and Communication Engineering</span>
 <p style="text-align: center;">ECED</p>
