--- a/med.html
+++ b/med.html
@@ -174,7 +174,7 @@
     max-width: 70%;
    margin-left: 200px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/faculty/Mechnical.jpg);height:450px;"></div>
+<div class="img" style="background-image: url(images/faculty/med.jpeg);height:450px;"></div>
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Mechanical Engineering</span>
 <p style="text-align: center;">MED</p>
