--- a/doaa.html
+++ b/doaa.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="css/jquery.timepicker.css">
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/image.css">
+
   <link rel="icon" type="image/png" href="images/logo/logo.png" />
 </head>
 
