--- a/eced.html
+++ b/eced.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
+  <link rel="stylesheet" href="css/image.css">
+
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="images/logo/logo.png" />
