--- a/electrical.html
+++ b/electrical.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
   <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/image.css">
+
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="images/logo/logo.png" />
 </head>
