--- a/placement.html
+++ b/placement.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="css/jquery.timepicker.css">
 <link rel="stylesheet" href="css/flaticon.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/image.css">
 <link rel="icon" type="image/png" href="images/logo/logo.png"/>
 </head>
 <body>
