--- a/gallery.html
+++ b/gallery.html
@@ -188,7 +188,7 @@
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/skyview.jpg);">
-<a href="images/droneshot2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+<a href="images/skyview.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 <span class="fa fa-expand"></span>
 </a>
 <div class="desc w-100 px-4">
