--- a/home.html
+++ b/home.html
@@ -200,7 +200,7 @@
               <img src="images/help.png" style="width:140%;">
             </div>
             <div class="media-body">
-              <h3 class="heading">Industry Engagement and Placement Cell</h3>
+              <h3 class="heading">Industry Engagement and Placements Cell</h3>
               <!--<p style="font-weight: bold;">Know more about data-placement at Thapar</p>
              <p>Have any doubts regarding the placements?</p> -->
               <p><a href="placement.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 70px;margin-left: 10px;">Contact Placements<span
@@ -459,6 +459,16 @@
             </div>
             <div class="text">
               <span>Years of Excellence</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
+          <div class="block-18 text-center">
+            <div class="text">
+              <strong class="number" data-number="50000">0</strong>
+            </div>
+            <div class="text">
+              <span>Success Stories</span>
             </div>
           </div>
         </div>
