--- a/doaa.html
+++ b/doaa.html
@@ -183,9 +183,9 @@
 <p style="text-align: center;">	Dean of Academic Affairs</p>
 <p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
 <br>
-<p>The focus of the department is on state of the art projects done by our BE and ME students, excellent teaching learning process, better alumni relations, good industry attachment program through project semester and outcome based education.At the undergraduate level, the Department lays emphasis on Software Engineering, Algorithm Analysis and Design, Operating Systems, Computer Graphics, Database and information Systems Engineering and Networking Technologies. The Department provides exposure to emerging technologies as well as futuristic technologies like High Performance Computing, Computer Animation and Gaming, Machine Learning and Data Analytics, Information and Cyber Security and Software Engineering.
+<!-- <p>The focus of the department is on state of the art projects done by our BE and ME students, excellent teaching learning process, better alumni relations, good industry attachment program through project semester and outcome based education.At the undergraduate level, the Department lays emphasis on Software Engineering, Algorithm Analysis and Design, Operating Systems, Computer Graphics, Database and information Systems Engineering and Networking Technologies. The Department provides exposure to emerging technologies as well as futuristic technologies like High Performance Computing, Computer Animation and Gaming, Machine Learning and Data Analytics, Information and Cyber Security and Software Engineering.
 
-</p>
+</p> -->
 
 
 <a href="https://tiet.zoom.us/my/msingh/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
