--- a/lmtsm.html
+++ b/lmtsm.html
@@ -188,7 +188,7 @@
     max-width: 70%;
    margin-left: 200px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/drnair.jpg);height:450px;"></div>
+<div class="img" style="background-image: url(images/dirMBA.jpg);height:450px;"></div>
 <div class="text-center p-4" style="width: ;">
 <span class="excerpt d-block"style="text-align: center;">LM Thapar School of Management
 </span>
