--- a/chemical.html
+++ b/chemical.html
@@ -230,7 +230,7 @@ Dr. Sandeep Sharma<br>
 Mr. Shubham<br>
 </td>
       
-       <td>https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09<br><br>
+       <td><a href="ttps://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a><br><br>
 
 Meeting ID: 332 713 6261<br>
 Passcode: 123
@@ -251,8 +251,8 @@ Dr. Parminder Singh<br>
 Dr. Sandeep Sharma<br>
 Mr. Shubham<br>
 </td>
-      
-       <td>https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09<br><br>
+
+<td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a><br><br>
 
 Meeting ID: 332 713 6261<br>
 Passcode: 123
@@ -274,7 +274,7 @@ Dr. Sandeep Sharma<br>
 Mr. Shubham<br>
 </td>
 
-<td>https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09<br><br>
+<td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a><br><br>
 
 Meeting ID: 332 713 6261<br>
 Passcode: 123
