--- a/streams.html
+++ b/streams.html
@@ -59,7 +59,7 @@
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Department of Biotechnology</h3>
-              <p>An excellent reputation precedes the Department of Biotechnology, Thapar Institute. Upholding which the
+              <p style="text-align: justify;">An excellent reputation precedes the Department of Biotechnology, Thapar Institute. Upholding which the
                 eminent faculty members initiate innovative research programmes while maintaining an intellectually
                 thriving space for students.</p>
               <a href="biotech.html" class="btn-custom d-flex align-items-center justify-content-center"><span
@@ -75,7 +75,7 @@
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Chemical Engineering</h3>
-              <p>The Department of Chemical Engineering of Thapar Institute of Engineering and Technology was
+              <p style="text-align: justify;">The Department of Chemical Engineering of Thapar Institute of Engineering and Technology was
                 established in 1992 with the Ph.D programme.  </p>
               <a href="chemical.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
@@ -90,7 +90,7 @@
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Civil Engineering</h3>
-              <p>The Civil Engineering Program at Thapar Institute of Engineering & Technology is designed to prepare
+              <p style="text-align: justify;">The Civil Engineering Program at Thapar Institute of Engineering & Technology is designed to prepare
                 its graduates for continued learning and successful careers in industry, government, academia and
                 consulting.</p>
               <a href="civil.html" class="btn-custom d-flex align-items-center justify-content-center"><span
@@ -112,7 +112,7 @@
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Computer Science & Engineering</h3>
-              <p>The Department of Computer Science and Engineering offers 4-year B.E. programme in Computer
+              <p style="text-align: justify;">The Department of Computer Science and Engineering offers 4-year B.E. programme in Computer
                 Engineering, Computer Science & Engineering and Computer Science & Business Systems.</p>
               <a href="csed.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
@@ -126,7 +126,7 @@
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Electrical & Instrumentation</h3>
-              <p>The Department of Electrical and Instrumentation Engineering has been playing a vital role in producing
+              <p style="text-align: justify;">The Department of Electrical and Instrumentation Engineering has been playing a vital role in producing
                 scientists and technologists of highest calibre ever since it was established in the year 1956.
               </p>
               <a href="electrical.html" class="btn-custom d-flex align-items-center justify-content-center"><span
@@ -143,7 +143,7 @@
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Electronics & Communication</h3>
-              <p>Thapar’s Department of Electronics and communication Engineering was established in 1975 with the
+              <p style="text-align: justify;">Thapar’s Department of Electronics and communication Engineering was established in 1975 with the
                 inception of the Institute to cater to undergraduate education in the field of Electronics and
                 communication Engineering.</p>
               <a href="eced.html" class="btn-custom d-flex align-items-center justify-content-center"><span
@@ -164,7 +164,7 @@
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Mechanical Engineering</h3>
-              <p>The department offers four Bachelor’s courses: B.E. Mechanical Engineering, B.E. Mechanical Production
+              <p style="text-align: justify;">The department offers four Bachelor’s courses: B.E. Mechanical Engineering, B.E. Mechanical Production
                 Engineering, B.E. Mechatronics Engineering & Integrated B.E. Mechanical MBA.</p>
               <a href="med.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
@@ -175,67 +175,6 @@
        
 
 
-<!--<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
-          <div class="d-block services text-center">
-            <div class="icon d-flex align-items-center justify-content-center">
-              <img class="logosize" src="images/worker.png">
-            </div>
-            <div class="media-body p-4">
-              <h3 class="heading">LMTSM</h3>
-              <p>LM Thapar School of Management, the B-School of Thapar Institute of Engineering & Technology is one of the top ranked Business Schools in the country.Prominent among the programs are MBA (full time), MBA Executive (hybrid), PhD (residential) and PhD (executive). The Business School takes pride in having very accomplished faculty, the school also hosts faculty from  its 15+ partner universities from across the world. </p>
-              <a href="lmtsm.html" class="btn-custom d-flex align-items-center justify-content-center"><span
-                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-            </div>
-          </div>
-        </div>
-
-
-
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
-          <div class="d-block services text-center">
-            <div class="icon d-flex align-items-center justify-content-center">
-              <img class="logosize" src="images/science.png">
-            </div>
-            <div class="media-body p-4">
-              <h3 class="heading">TSLAS</h3>
-              <p>Thapar School
-of Liberal Arts & Sciences </p>
-              <a href="tslas.html" class="btn-custom d-flex align-items-center justify-content-center"><span
-                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-            </div>
-          </div>
-        </div>
-</div>-->
-        <!-- <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Department of Biotechnology</h3>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right.</p>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-</div>
- -->
-
- <!--<div class="row mt-5 pt-4">
-        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
-          <div class="d-block services text-center">
-            <div class="icon d-flex align-items-center justify-content-center">
-              <img class="logosize" src="images/psychology.png">
-            </div>
-            <div class="media-body p-4">
-              <h3 class="heading">Humanities</h3>
-              <p>School of
-Humanities & Social Sciences, TIET </p>
-              <a href="humanities.html" class="btn-custom d-flex align-items-center justify-content-center"><span
-                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-            </div>
-          </div>
-        </div>-->
 
 
 
